--- a/style.css
+++ b/style.css
@@ -249,7 +249,25 @@ pre {
   font-size: 18px;
   color: #333;
 }
-.btn-disabled {
-  opacity: 0.5;
-  pointer-events: none;
+.buttons button.btn-disabled {
+  pointer-events: none; /* Desabilita interações com o botão */
+}
+
+.buttons button.btn-disabled::after {
+  content: attr(title); /* Exibe o conteúdo do title como tooltip */
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  top: -30px; /* Posiciona o tooltip acima do botão */
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.buttons button.btn-disabled:hover::after {
+  opacity: 1; /* Mostra o tooltip ao passar o mouse */
 }
